BaseProject/generated/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programme
Rule 1     programme -> statement
Rule 2     programme -> statement ; programme
Rule 3     statement -> assignation
Rule 4     statement -> structure
Rule 5     statement -> PRINT expression
Rule 6     structure -> WHILE expression { programme }
Rule 7     statement -> PRINTPIXEL ( expression , expression , expression , expression , expression )
Rule 8     expression -> expression ADD_OP expression
Rule 9     expression -> expression MUL_OP expression
Rule 10    expression -> NUMBER
Rule 11    expression -> IDENTIFIER
Rule 12    expression -> ( expression )
Rule 13    expression -> ADD_OP expression
Rule 14    assignation -> IDENTIFIER = expression

Terminals, with rules where they appear

(                    : 7 12
)                    : 7 12
,                    : 7 7 7 7
;                    : 2
=                    : 14
ADD_OP               : 8 13
IDENTIFIER           : 11 14
MUL_OP               : 9
NUMBER               : 10
PRINT                : 5
PRINTPIXEL           : 7
WHILE                : 6
error                : 
{                    : 6
}                    : 6

Nonterminals, with rules where they appear

assignation          : 3
expression           : 5 6 7 7 7 7 7 8 8 9 9 12 13 14
programme            : 2 6 0
statement            : 1 2
structure            : 4

Parsing method: LALR

state 0

    (0) S' -> . programme
    (1) programme -> . statement
    (2) programme -> . statement ; programme
    (3) statement -> . assignation
    (4) statement -> . structure
    (5) statement -> . PRINT expression
    (7) statement -> . PRINTPIXEL ( expression , expression , expression , expression , expression )
    (14) assignation -> . IDENTIFIER = expression
    (6) structure -> . WHILE expression { programme }

    PRINT           shift and go to state 2
    PRINTPIXEL      shift and go to state 1
    IDENTIFIER      shift and go to state 4
    WHILE           shift and go to state 6

    programme                      shift and go to state 5
    structure                      shift and go to state 7
    assignation                    shift and go to state 3
    statement                      shift and go to state 8

state 1

    (7) statement -> PRINTPIXEL . ( expression , expression , expression , expression , expression )

    (               shift and go to state 9


state 2

    (5) statement -> PRINT . expression
    (8) expression -> . expression ADD_OP expression
    (9) expression -> . expression MUL_OP expression
    (10) expression -> . NUMBER
    (11) expression -> . IDENTIFIER
    (12) expression -> . ( expression )
    (13) expression -> . ADD_OP expression

    NUMBER          shift and go to state 11
    IDENTIFIER      shift and go to state 12
    (               shift and go to state 13
    ADD_OP          shift and go to state 10

    expression                     shift and go to state 14

state 3

    (3) statement -> assignation .

    ;               reduce using rule 3 (statement -> assignation .)
    $end            reduce using rule 3 (statement -> assignation .)
    }               reduce using rule 3 (statement -> assignation .)


state 4

    (14) assignation -> IDENTIFIER . = expression

    =               shift and go to state 15


state 5

    (0) S' -> programme .



state 6

    (6) structure -> WHILE . expression { programme }
    (8) expression -> . expression ADD_OP expression
    (9) expression -> . expression MUL_OP expression
    (10) expression -> . NUMBER
    (11) expression -> . IDENTIFIER
    (12) expression -> . ( expression )
    (13) expression -> . ADD_OP expression

    NUMBER          shift and go to state 11
    IDENTIFIER      shift and go to state 12
    (               shift and go to state 13
    ADD_OP          shift and go to state 10

    expression                     shift and go to state 16

state 7

    (4) statement -> structure .

    ;               reduce using rule 4 (statement -> structure .)
    $end            reduce using rule 4 (statement -> structure .)
    }               reduce using rule 4 (statement -> structure .)


state 8

    (1) programme -> statement .
    (2) programme -> statement . ; programme

    }               reduce using rule 1 (programme -> statement .)
    $end            reduce using rule 1 (programme -> statement .)
    ;               shift and go to state 17


state 9

    (7) statement -> PRINTPIXEL ( . expression , expression , expression , expression , expression )
    (8) expression -> . expression ADD_OP expression
    (9) expression -> . expression MUL_OP expression
    (10) expression -> . NUMBER
    (11) expression -> . IDENTIFIER
    (12) expression -> . ( expression )
    (13) expression -> . ADD_OP expression

    NUMBER          shift and go to state 11
    IDENTIFIER      shift and go to state 12
    (               shift and go to state 13
    ADD_OP          shift and go to state 10

    expression                     shift and go to state 18

state 10

    (13) expression -> ADD_OP . expression
    (8) expression -> . expression ADD_OP expression
    (9) expression -> . expression MUL_OP expression
    (10) expression -> . NUMBER
    (11) expression -> . IDENTIFIER
    (12) expression -> . ( expression )
    (13) expression -> . ADD_OP expression

    NUMBER          shift and go to state 11
    IDENTIFIER      shift and go to state 12
    (               shift and go to state 13
    ADD_OP          shift and go to state 10

    expression                     shift and go to state 19

state 11

    (10) expression -> NUMBER .

    ADD_OP          reduce using rule 10 (expression -> NUMBER .)
    MUL_OP          reduce using rule 10 (expression -> NUMBER .)
    ;               reduce using rule 10 (expression -> NUMBER .)
    $end            reduce using rule 10 (expression -> NUMBER .)
    }               reduce using rule 10 (expression -> NUMBER .)
    ,               reduce using rule 10 (expression -> NUMBER .)
    )               reduce using rule 10 (expression -> NUMBER .)
    {               reduce using rule 10 (expression -> NUMBER .)


state 12

    (11) expression -> IDENTIFIER .

    ADD_OP          reduce using rule 11 (expression -> IDENTIFIER .)
    MUL_OP          reduce using rule 11 (expression -> IDENTIFIER .)
    ;               reduce using rule 11 (expression -> IDENTIFIER .)
    $end            reduce using rule 11 (expression -> IDENTIFIER .)
    }               reduce using rule 11 (expression -> IDENTIFIER .)
    ,               reduce using rule 11 (expression -> IDENTIFIER .)
    )               reduce using rule 11 (expression -> IDENTIFIER .)
    {               reduce using rule 11 (expression -> IDENTIFIER .)


state 13

    (12) expression -> ( . expression )
    (8) expression -> . expression ADD_OP expression
    (9) expression -> . expression MUL_OP expression
    (10) expression -> . NUMBER
    (11) expression -> . IDENTIFIER
    (12) expression -> . ( expression )
    (13) expression -> . ADD_OP expression

    NUMBER          shift and go to state 11
    IDENTIFIER      shift and go to state 12
    (               shift and go to state 13
    ADD_OP          shift and go to state 10

    expression                     shift and go to state 20

state 14

    (5) statement -> PRINT expression .
    (8) expression -> expression . ADD_OP expression
    (9) expression -> expression . MUL_OP expression

    ;               reduce using rule 5 (statement -> PRINT expression .)
    $end            reduce using rule 5 (statement -> PRINT expression .)
    }               reduce using rule 5 (statement -> PRINT expression .)
    ADD_OP          shift and go to state 21
    MUL_OP          shift and go to state 22


state 15

    (14) assignation -> IDENTIFIER = . expression
    (8) expression -> . expression ADD_OP expression
    (9) expression -> . expression MUL_OP expression
    (10) expression -> . NUMBER
    (11) expression -> . IDENTIFIER
    (12) expression -> . ( expression )
    (13) expression -> . ADD_OP expression

    NUMBER          shift and go to state 11
    IDENTIFIER      shift and go to state 12
    (               shift and go to state 13
    ADD_OP          shift and go to state 10

    expression                     shift and go to state 23

state 16

    (6) structure -> WHILE expression . { programme }
    (8) expression -> expression . ADD_OP expression
    (9) expression -> expression . MUL_OP expression

    {               shift and go to state 24
    ADD_OP          shift and go to state 21
    MUL_OP          shift and go to state 22


state 17

    (2) programme -> statement ; . programme
    (1) programme -> . statement
    (2) programme -> . statement ; programme
    (3) statement -> . assignation
    (4) statement -> . structure
    (5) statement -> . PRINT expression
    (7) statement -> . PRINTPIXEL ( expression , expression , expression , expression , expression )
    (14) assignation -> . IDENTIFIER = expression
    (6) structure -> . WHILE expression { programme }

    PRINT           shift and go to state 2
    PRINTPIXEL      shift and go to state 1
    IDENTIFIER      shift and go to state 4
    WHILE           shift and go to state 6

    programme                      shift and go to state 25
    structure                      shift and go to state 7
    assignation                    shift and go to state 3
    statement                      shift and go to state 8

state 18

    (7) statement -> PRINTPIXEL ( expression . , expression , expression , expression , expression )
    (8) expression -> expression . ADD_OP expression
    (9) expression -> expression . MUL_OP expression

    ,               shift and go to state 26
    ADD_OP          shift and go to state 21
    MUL_OP          shift and go to state 22


state 19

    (13) expression -> ADD_OP expression .
    (8) expression -> expression . ADD_OP expression
    (9) expression -> expression . MUL_OP expression

    ADD_OP          reduce using rule 13 (expression -> ADD_OP expression .)
    MUL_OP          reduce using rule 13 (expression -> ADD_OP expression .)
    ;               reduce using rule 13 (expression -> ADD_OP expression .)
    $end            reduce using rule 13 (expression -> ADD_OP expression .)
    }               reduce using rule 13 (expression -> ADD_OP expression .)
    ,               reduce using rule 13 (expression -> ADD_OP expression .)
    )               reduce using rule 13 (expression -> ADD_OP expression .)
    {               reduce using rule 13 (expression -> ADD_OP expression .)

  ! ADD_OP          [ shift and go to state 21 ]
  ! MUL_OP          [ shift and go to state 22 ]


state 20

    (12) expression -> ( expression . )
    (8) expression -> expression . ADD_OP expression
    (9) expression -> expression . MUL_OP expression

    )               shift and go to state 27
    ADD_OP          shift and go to state 21
    MUL_OP          shift and go to state 22


state 21

    (8) expression -> expression ADD_OP . expression
    (8) expression -> . expression ADD_OP expression
    (9) expression -> . expression MUL_OP expression
    (10) expression -> . NUMBER
    (11) expression -> . IDENTIFIER
    (12) expression -> . ( expression )
    (13) expression -> . ADD_OP expression

    NUMBER          shift and go to state 11
    IDENTIFIER      shift and go to state 12
    (               shift and go to state 13
    ADD_OP          shift and go to state 10

    expression                     shift and go to state 28

state 22

    (9) expression -> expression MUL_OP . expression
    (8) expression -> . expression ADD_OP expression
    (9) expression -> . expression MUL_OP expression
    (10) expression -> . NUMBER
    (11) expression -> . IDENTIFIER
    (12) expression -> . ( expression )
    (13) expression -> . ADD_OP expression

    NUMBER          shift and go to state 11
    IDENTIFIER      shift and go to state 12
    (               shift and go to state 13
    ADD_OP          shift and go to state 10

    expression                     shift and go to state 29

state 23

    (14) assignation -> IDENTIFIER = expression .
    (8) expression -> expression . ADD_OP expression
    (9) expression -> expression . MUL_OP expression

    ;               reduce using rule 14 (assignation -> IDENTIFIER = expression .)
    $end            reduce using rule 14 (assignation -> IDENTIFIER = expression .)
    }               reduce using rule 14 (assignation -> IDENTIFIER = expression .)
    ADD_OP          shift and go to state 21
    MUL_OP          shift and go to state 22


state 24

    (6) structure -> WHILE expression { . programme }
    (1) programme -> . statement
    (2) programme -> . statement ; programme
    (3) statement -> . assignation
    (4) statement -> . structure
    (5) statement -> . PRINT expression
    (7) statement -> . PRINTPIXEL ( expression , expression , expression , expression , expression )
    (14) assignation -> . IDENTIFIER = expression
    (6) structure -> . WHILE expression { programme }

    PRINT           shift and go to state 2
    PRINTPIXEL      shift and go to state 1
    IDENTIFIER      shift and go to state 4
    WHILE           shift and go to state 6

    programme                      shift and go to state 30
    structure                      shift and go to state 7
    assignation                    shift and go to state 3
    statement                      shift and go to state 8

state 25

    (2) programme -> statement ; programme .

    }               reduce using rule 2 (programme -> statement ; programme .)
    $end            reduce using rule 2 (programme -> statement ; programme .)


state 26

    (7) statement -> PRINTPIXEL ( expression , . expression , expression , expression , expression )
    (8) expression -> . expression ADD_OP expression
    (9) expression -> . expression MUL_OP expression
    (10) expression -> . NUMBER
    (11) expression -> . IDENTIFIER
    (12) expression -> . ( expression )
    (13) expression -> . ADD_OP expression

    NUMBER          shift and go to state 11
    IDENTIFIER      shift and go to state 12
    (               shift and go to state 13
    ADD_OP          shift and go to state 10

    expression                     shift and go to state 31

state 27

    (12) expression -> ( expression ) .

    ADD_OP          reduce using rule 12 (expression -> ( expression ) .)
    MUL_OP          reduce using rule 12 (expression -> ( expression ) .)
    ;               reduce using rule 12 (expression -> ( expression ) .)
    $end            reduce using rule 12 (expression -> ( expression ) .)
    }               reduce using rule 12 (expression -> ( expression ) .)
    ,               reduce using rule 12 (expression -> ( expression ) .)
    )               reduce using rule 12 (expression -> ( expression ) .)
    {               reduce using rule 12 (expression -> ( expression ) .)


state 28

    (8) expression -> expression ADD_OP expression .
    (8) expression -> expression . ADD_OP expression
    (9) expression -> expression . MUL_OP expression

    ADD_OP          reduce using rule 8 (expression -> expression ADD_OP expression .)
    ;               reduce using rule 8 (expression -> expression ADD_OP expression .)
    $end            reduce using rule 8 (expression -> expression ADD_OP expression .)
    }               reduce using rule 8 (expression -> expression ADD_OP expression .)
    ,               reduce using rule 8 (expression -> expression ADD_OP expression .)
    )               reduce using rule 8 (expression -> expression ADD_OP expression .)
    {               reduce using rule 8 (expression -> expression ADD_OP expression .)
    MUL_OP          shift and go to state 22

  ! MUL_OP          [ reduce using rule 8 (expression -> expression ADD_OP expression .) ]
  ! ADD_OP          [ shift and go to state 21 ]


state 29

    (9) expression -> expression MUL_OP expression .
    (8) expression -> expression . ADD_OP expression
    (9) expression -> expression . MUL_OP expression

    ADD_OP          reduce using rule 9 (expression -> expression MUL_OP expression .)
    MUL_OP          reduce using rule 9 (expression -> expression MUL_OP expression .)
    ;               reduce using rule 9 (expression -> expression MUL_OP expression .)
    $end            reduce using rule 9 (expression -> expression MUL_OP expression .)
    }               reduce using rule 9 (expression -> expression MUL_OP expression .)
    ,               reduce using rule 9 (expression -> expression MUL_OP expression .)
    )               reduce using rule 9 (expression -> expression MUL_OP expression .)
    {               reduce using rule 9 (expression -> expression MUL_OP expression .)

  ! ADD_OP          [ shift and go to state 21 ]
  ! MUL_OP          [ shift and go to state 22 ]


state 30

    (6) structure -> WHILE expression { programme . }

    }               shift and go to state 32


state 31

    (7) statement -> PRINTPIXEL ( expression , expression . , expression , expression , expression )
    (8) expression -> expression . ADD_OP expression
    (9) expression -> expression . MUL_OP expression

    ,               shift and go to state 33
    ADD_OP          shift and go to state 21
    MUL_OP          shift and go to state 22


state 32

    (6) structure -> WHILE expression { programme } .

    ;               reduce using rule 6 (structure -> WHILE expression { programme } .)
    $end            reduce using rule 6 (structure -> WHILE expression { programme } .)
    }               reduce using rule 6 (structure -> WHILE expression { programme } .)


state 33

    (7) statement -> PRINTPIXEL ( expression , expression , . expression , expression , expression )
    (8) expression -> . expression ADD_OP expression
    (9) expression -> . expression MUL_OP expression
    (10) expression -> . NUMBER
    (11) expression -> . IDENTIFIER
    (12) expression -> . ( expression )
    (13) expression -> . ADD_OP expression

    NUMBER          shift and go to state 11
    IDENTIFIER      shift and go to state 12
    (               shift and go to state 13
    ADD_OP          shift and go to state 10

    expression                     shift and go to state 34

state 34

    (7) statement -> PRINTPIXEL ( expression , expression , expression . , expression , expression )
    (8) expression -> expression . ADD_OP expression
    (9) expression -> expression . MUL_OP expression

    ,               shift and go to state 35
    ADD_OP          shift and go to state 21
    MUL_OP          shift and go to state 22


state 35

    (7) statement -> PRINTPIXEL ( expression , expression , expression , . expression , expression )
    (8) expression -> . expression ADD_OP expression
    (9) expression -> . expression MUL_OP expression
    (10) expression -> . NUMBER
    (11) expression -> . IDENTIFIER
    (12) expression -> . ( expression )
    (13) expression -> . ADD_OP expression

    NUMBER          shift and go to state 11
    IDENTIFIER      shift and go to state 12
    (               shift and go to state 13
    ADD_OP          shift and go to state 10

    expression                     shift and go to state 36

state 36

    (7) statement -> PRINTPIXEL ( expression , expression , expression , expression . , expression )
    (8) expression -> expression . ADD_OP expression
    (9) expression -> expression . MUL_OP expression

    ,               shift and go to state 37
    ADD_OP          shift and go to state 21
    MUL_OP          shift and go to state 22


state 37

    (7) statement -> PRINTPIXEL ( expression , expression , expression , expression , . expression )
    (8) expression -> . expression ADD_OP expression
    (9) expression -> . expression MUL_OP expression
    (10) expression -> . NUMBER
    (11) expression -> . IDENTIFIER
    (12) expression -> . ( expression )
    (13) expression -> . ADD_OP expression

    NUMBER          shift and go to state 11
    IDENTIFIER      shift and go to state 12
    (               shift and go to state 13
    ADD_OP          shift and go to state 10

    expression                     shift and go to state 38

state 38

    (7) statement -> PRINTPIXEL ( expression , expression , expression , expression , expression . )
    (8) expression -> expression . ADD_OP expression
    (9) expression -> expression . MUL_OP expression

    )               shift and go to state 39
    ADD_OP          shift and go to state 21
    MUL_OP          shift and go to state 22


state 39

    (7) statement -> PRINTPIXEL ( expression , expression , expression , expression , expression ) .

    ;               reduce using rule 7 (statement -> PRINTPIXEL ( expression , expression , expression , expression , expression ) .)
    $end            reduce using rule 7 (statement -> PRINTPIXEL ( expression , expression , expression , expression , expression ) .)
    }               reduce using rule 7 (statement -> PRINTPIXEL ( expression , expression , expression , expression , expression ) .)

